--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,21 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+.fb-row {
+  flex-direction: row !important;
+  justify-content: space-between;
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+
+.navButton {
+  margin-right: 30px;
+}
+
+.navSearch {
+  margin-top: 14px;
 }
